--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,7 @@
 
     <string name="favorite">Favorite</string>
     <string name="unfavorite">Unfavorite</string>
+    <string name="error_adding_favorite">Error favoriting </string>
+    <string name="successfully_added_favorite">Successfully favorited </string>
 
 </resources>
