--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="title_activity_settings">Settings</string>
     <string name="synopsis">Synopsis: </string>
     <string name="no_synopsis">No synopsis provided.</string>
+    <string name="trailer_header">Trailers</string>
+    <string name="reviews_header">Reviews</string>
+    <string name="by">By </string>
 
 
     <string name="id_json">id</string>
